# prodigy

./: .gitignore  .howfairis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Licence  MANIFEST.in  README.md  calculate_IC.py  config.py  predict_IC.py  predict_NIS.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-publish.yml  publish.yml  pypi-publish-pre-release.yml  pypi-publish.yml  unittests.yml
.trunk/: trunk.yaml
.trunk/configs/: .flake8
ICs/: ICs-parameters.sh  filter_propery.py  icsdistance.py
NIS/: parameter_0.5.sh
data/: __init__.py  aa_properties.py  dataset.json
examples/: 3BZD.ic_model  3BZD.nis_model  3bzd.cif
lib/: freesasa.py  models.py  parsers.py  utils.py
prodigy/: __init__.py  predict_IC.py
prodigy/lib/: aa_properties.py  freesasa.py  freesasa_tools.py  models.py  parsers.py  utils.py
src/prodigy/: predict_IC.py
src/prodigy/modules/: __init__.py  freesasa_tools.py
src/prodigy_prot/: __init__.py  cli.py  freesasa_tools.py  main.py  models.py  parsers.py  predict_IC.py  prodigy.py
src/prodigy_prot/modules/: aa_properties.py  freesasa_tools.py  models.py  parsers.py  prodigy.py  structure.py  utils.py
tests/: __init__.py  test_parsers.py  test_prodigy.py  test_utils.py
tests/test_data/: 2oob.cif  dataset.json
