[tool.poetry]
name = "prodigy-prot"
license = "Apache-2.0"
version = "2.2.4"
description = "PROtein binDIng enerGY prediction"
authors = [
  "Computational Structural Biology Group at Utrecht University <prodigy.bonvinlab@gmail.com>",
]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.80"
freesasa = "2.2.1"
numpy = "^1.22.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"
hypothesis = "^6.100.1"

[tool.poetry.scripts]
prodigy = "prodigy_prot.predict_IC:main"

[tool.black]
line-length = 79

[tool.setuptools]
include-package-data = true
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
