[project]
name = "prodigy-prot"
license = "Apache-2.0"
version = "2.2.5"
description = "PROtein binDIng enerGY prediction"
authors = [{ name = "BonvinLab", email = "bonvinlab.support@uu.nl" }]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = ["biopython>=1.80", "freesasa>=2.2.1", "numpy>=2"]

[project.optional-dependencies]
dev = ["pytest", "coverage", "hypothesis", "pytest-cov"]

[project.scripts]
prodigy = "prodigy_prot.predict_IC:main"

[tool.setuptools]
include-package-data = true
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
